Change Log for OpenXava project
===============================

- Fix: Some mistypes in code keywords (nonce) in migrations instructions to 7.1.
- Fix: IForwardAction for executing JavaScript no longer supported not included in migration doc to 7.1. 
- Fix: Migration documentation from 6 to 7 misses some resources to copy and to exclude.
- Fix: Customizing doc for Welcome and First Steps pages references master branch, sometimes not compatible. 
- Article in documentation to integrate Spring Boot with OpenXava.
- New property trustedHostsForImages in xava.properties for exceptions in CSP for source of images. 
- New property trustedHostsForScripts in xava.properties for exceptions in CSP for source of scripts.
- New property trustedHostsForStyles in xava.properties for exceptions in CSP for source of CSS files.
- New property trustedHostsForFrames in xava.properties for exceptions in CSP for frame and iframes.
- HSQLDB updated to 2.7.2.
- Lombok updated to 1.18.28.
- Jersey media updated to 2.39.1.

OpenXava 7.1.1 (2023-6-2)
-------------------------
- It's possible to go to the page from a link in @HtmlText.
- Button for changing font color added to button bar for @HtmlText editor. 
- JasperReports and fonts upgraded to 6.20.5.
- Groovy upgraded to 4.0.12. 
- Pdfbox upgraded to 2.0.28.
- Jaxb impl upgraded to 2.3.8.
- Embedded Tomcat used in development upgraded to 9.0.75.
- Driver version in doc and new projects upgraded for MySQL, PostgreSQL, Oracle, Informix.
- MS SQL documentation improved to deal with secure connection problems.
- Fix: Sign in form does not work if the user presses ENTER to login.
- Fix: Custom style from custom.css file in xava/style of your project is no longer recognized.
- Fix: Impossible to add links in @HtmlText.
- Fix: X for closing dialogs is no longer shown.
- Fix: The simple attribute in @HtmlText has no effect.
- Fix: Applications no longer work in root context (AppServer.run("") or ROOT.war).